--- a/AIEAIDemonstration/AIEAIDemonstration.vcxproj.filters
+++ b/AIEAIDemonstration/AIEAIDemonstration.vcxproj.filters
@@ -31,6 +31,12 @@
     <Filter Include="Source Files\Spawner">
       <UniqueIdentifier>{97fe16d6-768f-415d-a1df-4acafb22e349}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Solvers">
+      <UniqueIdentifier>{5441bbaf-53ce-488c-8dcc-abcf0f5ac6e9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Solvers">
+      <UniqueIdentifier>{7d1f09af-3d0c-4250-a10a-068bc5fe06a5}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\main.cpp">
@@ -50,6 +56,24 @@
     </ClCompile>
     <ClCompile Include="source\Director.cpp">
       <Filter>Source Files\Spawner</Filter>
+    </ClCompile>
+    <ClCompile Include="source\FiniteStateMachine.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="source\CollisionEngine.cpp">
+      <Filter>Source Files\Solvers</Filter>
+    </ClCompile>
+    <ClCompile Include="source\Circle.cpp">
+      <Filter>Source Files\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="source\Box.cpp">
+      <Filter>Source Files\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="source\Polygon.cpp">
+      <Filter>Source Files\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="source\Transform.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -91,6 +115,15 @@
     </ClInclude>
     <ClInclude Include="source\Polygon.h">
       <Filter>Header Files\Components\Collisions</Filter>
+    </ClInclude>
+    <ClInclude Include="source\Graph.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="source\FiniteStateMachine.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="source\CollisionEngine.h">
+      <Filter>Header Files\Solvers</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
