--- a/AIEAIDemonstration/AIEAIDemonstration.vcxproj.filters
+++ b/AIEAIDemonstration/AIEAIDemonstration.vcxproj.filters
@@ -91,6 +91,12 @@
     <Filter Include="Source Files\Users\TradingBot">
       <UniqueIdentifier>{77128e45-79ff-425a-9b78-5894d8456747}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Systems\Pathfinding">
+      <UniqueIdentifier>{e1f2c10e-5884-4e60-a1e3-4e5405ce5910}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Systems\Pathfinding">
+      <UniqueIdentifier>{fcd13376-b724-489d-aa0d-c651f48b8b97}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\TestSpawner.cpp">
@@ -167,6 +173,9 @@
     </ClCompile>
     <ClCompile Include="source\TradingRenderer.cpp">
       <Filter>Source Files\Systems\Components\Core</Filter>
+    </ClCompile>
+    <ClCompile Include="source\Pathfinder.cpp">
+      <Filter>Source Files\Systems\Pathfinding</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -265,6 +274,12 @@
     </ClInclude>
     <ClInclude Include="source\TradingRenderer.h">
       <Filter>Header Files\Systems\Components\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="source\Pathfinder.h">
+      <Filter>Header Files\Systems\Pathfinding</Filter>
+    </ClInclude>
+    <ClInclude Include="source\PathStructure.h">
+      <Filter>Header Files\Systems\Pathfinding</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
