--- a/AIEAIDemonstration/AIEAIDemonstration.vcxproj
+++ b/AIEAIDemonstration/AIEAIDemonstration.vcxproj
@@ -157,8 +157,9 @@
     <ClCompile Include="source\FiniteStateMachine.cpp" />
     <ClCompile Include="source\GameObject.cpp" />
     <ClCompile Include="source\GotoState.cpp" />
+    <ClCompile Include="source\Heuristics.cpp" />
     <ClCompile Include="source\main.cpp" />
-    <ClCompile Include="source\Pathfinder.cpp" />
+    <ClCompile Include="source\NavMesh.cpp" />
     <ClCompile Include="source\Polygon.cpp" />
     <ClCompile Include="source\RangeTransition.cpp" />
     <ClCompile Include="source\Renderer.cpp" />
@@ -188,10 +189,11 @@
     <ClInclude Include="source\GotoState.h" />
     <ClInclude Include="source\Graph.h" />
     <ClInclude Include="source\BlackboardItem.h" />
+    <ClInclude Include="source\Heuristics.h" />
     <ClInclude Include="source\MathsLibrary.h" />
     <ClInclude Include="source\ExchangedTransition.h" />
-    <ClInclude Include="source\Pathfinder.h" />
-    <ClInclude Include="source\PathStructure.h" />
+    <ClInclude Include="source\NavMesh.h" />
+    <ClInclude Include="source\NavMeshStructures.h" />
     <ClInclude Include="source\Polygon.h" />
     <ClInclude Include="source\RangeTransition.h" />
     <ClInclude Include="source\Renderer.h" />
